v3.10.0 (XXXX-XX-XX)
--------------------

* Fixed SEARCH-392 Fixed field features propagation.

* Fixed SEARCH-388 Fixed handling nested subfields.

* Fixed SEARCH-379 Transaction is properly set to index during optimization.

* Fixed issue BTS-1018: Improve logging of binary velocypack request data.

* Updated ArangoDB Starter to 0.15.5.

* Fixed BTS-1017: Fixed a graph search issue, where subqueries lead to incorrect
  results when they have been pushed down fully onto a DBServer when they are in
  a Hybrid Disjoint SmartGraph context and SatelliteCollections were part of it.

* Fixed issue BTS-1023:
  Added Linux-specific startup option `--use-splice-syscall` to control whether
  the Linux-specific splice() syscall should be used for copying file contents.
  While the syscall is generally available since Linux 2.6.x, it is also
  required that the underlying filesystem supports the splice operation. This is
  not true for some encrypted filesystems, on which splice() calls thus fail.
  By setting the startup option `--use-splice-syscall` to `false`, a less
  efficient, but more portable user-space file copying method will be used
  instead, which should work on all filesystems.
  The startup option is not available on other operating systems than Linux.

* Fixed SEARCH-386 Fixed disjunction coverage in the inverted index with
  non-default analyzers.

* Fixed SEARCH-373  Fixed indexing same field as nested and as non-nested.


v3.10.0-beta.1 (2022-09-14)
---------------------------

* Display progress during Arangosearch link and inverted index recovery.

* Fixed SEARCH-374 and SEARCH-358 Fixed a rare case of wrong seek operation in
  the sparse_bitset during query ArangoSearch execution.

* Updated arangosync to v2.12.0-preview-12.

* Updated ArangoDB Starter to 0.15.5-preview-3.

* Fixed a rare occuring issue where paths inside a DisjointSmart traversal
  containing only satellite relevant nodes were not returned properly (ES-1265).
