@@ -251,9 +251,9 @@ static bool CreatePipes(int* pipe_server_to_child, int* pipe_child_to_server) {
 /// @brief starts external process
 ////////////////////////////////////////////////////////////////////////////////
 
-static void StartExternalProcess(
-    ExternalProcess* external, bool usePipes,
-    std::vector<std::string> const& additionalEnv) {
+static void StartExternalProcess(ExternalProcess* external, bool usePipes,
+                                 std::vector<std::string> const& additionalEnv,
+                                 std::string const& fileForStdErr) {
   int pipe_server_to_child[2];
   int pipe_child_to_server[2];
 
@@ -287,11 +287,23 @@ static void StartExternalProcess(
     } else {
       {  // "close" stdin, but avoid fd 0 being reused!
         int fd = open("/dev/null", O_RDONLY);
-        dup2(fd, 0);
-        close(fd);
+        if (fd >= 0) {
+          dup2(fd, 0);
+          close(fd);
+        }
       }
       fcntl(1, F_SETFD, 0);
       fcntl(2, F_SETFD, 0);
+    }
+    if (!fileForStdErr.empty()) {
+      // Redirect stderr:
+      int fd = open(fileForStdErr.c_str(), O_CREAT | O_WRONLY | O_TRUNC, 0644);
+      if (fd >= 0) {
+        dup2(fd, 2);  // note that 2 was open before, so fd is not equal to 2,
+                      // and the previous 2 is now silently being closed!
+                      // Furthermore, if this fails, we stay on the other one.
+        close(fd);    // need to get rid of the second file descriptor.
+      }
     }
 
     // add environment variables
@@ -554,7 +566,8 @@ static bool startProcess(ExternalProcess* external, HANDLE rd, HANDLE wr) {
 
 static void StartExternalProcess(
     ExternalProcess* external, bool usePipes,
-    std::vector<std::string> const& additionalEnv) {
+    std::vector<std::string> const& additionalEnv,
+    std::string const& /* fileForStdErr ignored for now on Windows */) {
   HANDLE hChildStdinRd = NULL, hChildStdinWr = NULL;
   HANDLE hChildStdoutRd = NULL, hChildStdoutWr = NULL;
   bool fSuccess;
@@ -910,7 +923,8 @@ void TRI_SetProcessTitle(char const* title) {
 void TRI_CreateExternalProcess(char const* executable,
                                std::vector<std::string> const& arguments,
                                std::vector<std::string> const& additionalEnv,
-                               bool usePipes, ExternalId* pid) {
+                               bool usePipes, ExternalId* pid,
+                               std::string const& fileForStdErr) {
   size_t const n = arguments.size();
   // create the external structure
   auto external = std::make_unique<ExternalProcess>();
@@ -948,7 +962,7 @@ void TRI_CreateExternalProcess(char const* executable,
   external->_arguments[n + 1] = nullptr;
   external->_status = TRI_EXT_NOT_STARTED;
 
-  StartExternalProcess(external.get(), usePipes, additionalEnv);
+  StartExternalProcess(external.get(), usePipes, additionalEnv, fileForStdErr);
 
   if (external->_status != TRI_EXT_RUNNING) {
     pid->_pid = TRI_INVALID_PROCESS_ID;
