@@ -1,6 +1,12 @@
 v3.10.0 (XXXX-XX-XX)
 --------------------
 
+* Improve upload and download speed of hotbackup by changing the way we use
+  rclone. Empty hash files are now uploaded or downloaded by pattern, and
+  all other files are done in batches without remote directory listing,
+  which allows rclone to parallelize and avoid a lot of unnecessary network
+  traffic. The format of hotbackups does not change at all.
+
 * Fixed SEARCH-392 Fixed field features propagation.
 
 * Fixed SEARCH-388 Fixed handling nested subfields.
